--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,5 +63,9 @@ add_custom_target(
         -t ${PROJECT_SOURCE_DIR}/tools/convert/templates/StaticGrammar.cpp
         -o ${PROJECT_SOURCE_DIR}/bin/generated/cpp/StaticGrammar.cpp
         -i ${PROJECT_SOURCE_DIR}/resources/src/calculator/syntax_grammar.txt
+        COMMAND ${TOOL_CONVERT_SYNTAX_CONFIG}
+        -t ${PROJECT_SOURCE_DIR}/tools/convert/templates/StaticSyntaxConfig.cpp
+        -o ${PROJECT_SOURCE_DIR}/bin/generated/cpp/StaticSyntaxConfig.cpp
+        -i ${PROJECT_SOURCE_DIR}/resources/src/calculator/syntax_config.json
         DEPENDS ${TOOL_CONVERT_GRAMMAR}
 )
