--- a/tools/convert/CMakeLists.txt
+++ b/tools/convert/CMakeLists.txt
@@ -7,9 +7,15 @@ set(TOOL_CONVERT_GRAMMAR ${TOOL_CONVERT_GRAMMAR} PARENT_SCOPE)
 set(TOOL_CONVERT_SYNTAX_CONFIG "convert-syntax-config")
 set(TOOL_CONVERT_SYNTAX_CONFIG ${TOOL_CONVERT_SYNTAX_CONFIG} PARENT_SCOPE)
 
+set(TOOL_CONVERT_SYNTAX_MSG "convert-syntax-msg")
+set(TOOL_CONVERT_SYNTAX_MSG ${TOOL_CONVERT_SYNTAX_MSG} PARENT_SCOPE)
+
 # Add convert executables
 add_executable(${TOOL_CONVERT_GRAMMAR} Convertible.cpp ConvertGrammar.cpp)
 target_link_libraries(${TOOL_CONVERT_GRAMMAR} ${PROJECT_DEV_LIB})
 
 add_executable(${TOOL_CONVERT_SYNTAX_CONFIG} Convertible.cpp ConvertSyntaxConfig.cpp)
 target_link_libraries(${TOOL_CONVERT_SYNTAX_CONFIG} ${PROJECT_DEV_LIB})
+
+add_executable(${TOOL_CONVERT_SYNTAX_MSG} Convertible.cpp ConvertSyntaxMessages.cpp)
+target_link_libraries(${TOOL_CONVERT_SYNTAX_MSG} ${PROJECT_DEV_LIB})
