Changed static data storage method

--- a/tools/convert/CMakeLists.txt
+++ b/tools/convert/CMakeLists.txt
@@ -1,21 +1,9 @@
 cmake_minimum_required(VERSION 3.5)
 project(convert)
 
-set(TOOL_CONVERT_GRAMMAR "convert-grammar")
-set(TOOL_CONVERT_GRAMMAR ${TOOL_CONVERT_GRAMMAR} PARENT_SCOPE)
-
-set(TOOL_CONVERT_SYNTAX_CONFIG "convert-syntax-config")
-set(TOOL_CONVERT_SYNTAX_CONFIG ${TOOL_CONVERT_SYNTAX_CONFIG} PARENT_SCOPE)
-
-set(TOOL_CONVERT_SYNTAX_MSG "convert-syntax-msg")
-set(TOOL_CONVERT_SYNTAX_MSG ${TOOL_CONVERT_SYNTAX_MSG} PARENT_SCOPE)
+set(TOOL_CONVERT_RESOURCES "convert-resources")
+set(TOOL_CONVERT_RESOURCES ${TOOL_CONVERT_RESOURCES} PARENT_SCOPE)
 
 # Add convert executables
-add_executable(${TOOL_CONVERT_GRAMMAR} Convertible.cpp ConvertGrammar.cpp)
+add_executable(${TOOL_CONVERT_RESOURCES} ConvertResources.cpp)
 target_link_libraries(${TOOL_CONVERT_GRAMMAR} ${PROJECT_DEV_LIB})
-
-add_executable(${TOOL_CONVERT_SYNTAX_CONFIG} Convertible.cpp ConvertSyntaxConfig.cpp)
-target_link_libraries(${TOOL_CONVERT_SYNTAX_CONFIG} ${PROJECT_DEV_LIB})
-
-add_executable(${TOOL_CONVERT_SYNTAX_MSG} Convertible.cpp ConvertSyntaxMessages.cpp)
-target_link_libraries(${TOOL_CONVERT_SYNTAX_MSG} ${PROJECT_DEV_LIB})
