Fixed bugs and enhanced pro lib

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,11 +67,11 @@ add_custom_target(
         COMMAND ${TOOL_CONVERT_RESOURCES}
         -t ${PROJECT_SOURCE_DIR}/tools/convert/include/easycc/tools/StaticResources.h
         -o ${PROJECT_SOURCE_DIR}/bin/include/easycc/tools/StaticResources.h
-        /*SYNTAX_ERRORS*/=${PROJECT_SOURCE_DIR}/resources/src/oop/syntax_errors.json
-        /*SYNTAX_CONFIG*/=${PROJECT_SOURCE_DIR}/resources/src/oop/syntax_config.json
-        /*SYNTAX_GRAMMAR*/=${PROJECT_SOURCE_DIR}/resources/src/oop/syntax_grammar.json
-        /*LEXICAL_ERRORS*/=${PROJECT_SOURCE_DIR}/resources/src/oop/lexical_errors.json
-        /*LEXICAL_CONFIG*/=${PROJECT_SOURCE_DIR}/resources/src/oop/lexical_config.json
-        /*LEXICAL_STATE_MACHINE*/=${PROJECT_SOURCE_DIR}/resources/src/oop/lexical_state_machine.json
+        /*SYNTAX_ERRORS*/=${SYNTAX_ERRORS}
+        /*SYNTAX_CONFIG*/=${SYNTAX_CONFIG}
+        /*SYNTAX_GRAMMAR*/=${SYNTAX_GRAMMAR}
+        /*LEXICAL_ERRORS*/=${LEXICAL_ERRORS}
+        /*LEXICAL_CONFIG*/=${LEXICAL_CONFIG}
+        /*LEXICAL_STATE_MACHINE*/=${LEXICAL_STATE_MACHINE}
         DEPENDS ${TOOL_CONVERT_RESOURCES}
 )
