--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,15 +7,15 @@ set(PROJECT_DEV_LIB easyccdev)
 set(PROJECT_PRO_LIB easyccpro)
 
 # Configure directory of output file
-set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
 
 # Copy resources
 set(TEST_RES_PATH "resources/test")
-file(COPY "${TEST_RES_PATH}/grammar/" DESTINATION "${CMAKE_BINARY_DIR}/bin/${TEST_RES_PATH}/grammar/")
-file(COPY "${TEST_RES_PATH}/graph/" DESTINATION "${CMAKE_BINARY_DIR}/bin/${TEST_RES_PATH}/graph/")
-file(COPY "${TEST_RES_PATH}/firstfollow/" DESTINATION "${CMAKE_BINARY_DIR}/bin/${TEST_RES_PATH}/firstfollow/")
+file(COPY "${PROJECT_SOURCE_DIR}/${TEST_RES_PATH}/grammar/" DESTINATION "${PROJECT_BINARY_DIR}/bin/${TEST_RES_PATH}/grammar/")
+file(COPY "${PROJECT_SOURCE_DIR}/${TEST_RES_PATH}/graph/" DESTINATION "${PROJECT_BINARY_DIR}/bin/${TEST_RES_PATH}/graph/")
+file(COPY "${PROJECT_SOURCE_DIR}/${TEST_RES_PATH}/firstfollow/" DESTINATION "${PROJECT_BINARY_DIR}/bin/${TEST_RES_PATH}/firstfollow/")
 
 # Store src cpp files in a variable
 file(GLOB_RECURSE PROJECT_SOURCE_FILES "src/*.cpp")
