Enhanced json files

--- a/resources/src/calculator/lexical_config.json
+++ b/resources/src/calculator/lexical_config.json
@@ -15,5 +15,9 @@
         "exclude": []
     },
 
-    "reserved": {}
+    "reserved": {
+        "T_INTEGER" : {
+            "0" : "T_ZERO"
+        }
+    }
 }
