--- a/.travis.yml
+++ b/.travis.yml
@@ -17,22 +17,15 @@ before_script:
   - WORKSPACE=$PWD
   - sudo apt remove cmake
   - curl "https://cmake.org/files/v3.9/cmake-3.9.0-rc3.tar.gz" > /tmp/cmake.tar.gz
-  - cd /tmp
-  - tar -xf cmake.tar.gz
-  - cd cmake-3.9.0-rc3/
-  - ./configure
+  - cd /tmp; tar -xf cmake.tar.gz
+  - cd cmake-3.9.0-rc3/; ./configure
   - make | tail -n50
   - sudo make install | tail -n50
   - curl -L "https://downloads.sourceforge.net/project/boost/boost/1.63.0/boost_1_63_0.tar.gz" > /tmp/boost.tar.gz
-  - cd /tmp
-  - tar -xf boost.tar.gz
-  - cd boost_1_63_0/
-  - ./bootstrap.sh --prefix=/usr/local | tail -n50
+  - cd /tmp; tar -xf boost.tar.gz
+  - cd boost_1_63_0/; ./bootstrap.sh --prefix=/usr/local | tail -n50
   - sudo ./b2 install
-  - cd $WORKSPACE
-  - mkdir build
-  - cd build
-  - cmake ..
-  - make
+  - cd $WORKSPACE; cmake .; make
+  - cd $WORKSPACE/examples/calculator/; cmake ..; make
 
-script: cd bin; ./easycctests
+script: cd $WORKSPACE/bin; ./easycctests
