--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,16 +36,18 @@ else()
 endif()
 
 # Add boost
-add_definitions(-DBOOST_LOG_DYN_LINK)
-find_package(Boost 1.63.0 COMPONENTS log log_setup thread date_time filesystem system REQUIRED)
-link_libraries(${CMAKE_THREAD_LIBS_INIT} ${Boost_LIBRARIES} ${Boost_LIBRARIES})
+set(Boost_USE_STATIC_LIBS ON)
+set(Boost_USE_MULTITHREADED ON)
+set(Boost_USE_STATIC_RUNTIME OFF)
+find_package(Boost 1.64.0 COMPONENTS log log_setup thread date_time filesystem system REQUIRED)
+if(NOT Boost_FOUND)
+    message(FATAL_ERROR "Boost not found!")
+endif()
+include_directories(${Boost_INCLUDE_DIRS})
+link_libraries(${Boost_LIBRARIES})
 
 # Compile with -std=c++11 flag
 add_compile_options(-std=c++11)
-
-# Link libraries to all targets
-link_libraries(-lpthread)
-link_libraries(${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY})
 
 # Add development library target
 add_library(${PROJECT_DEV_LIB} ${PROJECT_SOURCE_FILES} src/easycc/EasyCCDev.cpp)
