--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,3 +2,10 @@ site_name: 'EasyCC C++'
 repo_url: 'https://github.com/amirbawab/EasyCC-CPP'
 theme: 'readthedocs'
 site_description: 'EasyCC C++ documentation'
+pages:
+    - 'Home': 'index.md'
+    - 'Lexical analysis': 'lexical.md'
+    - 'Syntax analysis': 'syntax.md'
+    - 'Semantic analysis': 'semantic.md'
+    - 'Code generation': 'code.md'
+    - 'Calculator example': 'example.md'
