--- a/examples/calculator/CMakeLists.txt
+++ b/examples/calculator/CMakeLists.txt
@@ -16,7 +16,7 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 # Include calculator header files (e.g. same as -I flag)
 include_directories(include)
 include_directories(../../include)
-include_directories(../../rapidjson/include)
+include_directories(../../thirdparty/rapidjson/include)
 
 # Store cpp files in a variable
 file(GLOB_RECURSE CALC_PROJECT_SOURCE_FILES src/*/*.cpp)
